Implemented below changes 1. Added logic to list the contents of a directory 2. Thymeleaf template to support the listing of directories and basic navigation

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,5 +8,16 @@
 <body>
 	<h1>Welcome to Explorer</h1>
 	<p>Directory list</p>
+	<p th:text="${pwd}"></p>
+	<a th:if="${prevDir != null}" th:href="@{'/?pathToFile=' + ${prevDir}}">..</a>
+	<ul th:each="file: ${fileList}">
+		<li>
+			<a 
+				th:text="${file.getName()}" 
+				th:href="@{'/?pathToFile=' + ${pwd} + '/' + ${file.getName()}}"
+			>
+			</a>
+		</li>
+	</ul>
 </body>
 </html>
