--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,20 +9,20 @@
 	<h1>Welcome to Explorer</h1>
 	<p>Directory list</p>
 	<p th:text="${pwd}"></p>
-	<a th:if="${prevDir != null}" th:href="(${#strings.equals(prevDir, '/')}) ? ${prevDir} : '/?pathToFile=' + ${prevDir}">..</a>
+	<a th:if="${prevDir != null}" th:href="@{${prevDir}}">..</a>
 	<!-- <span th:text="${#strings.equals(prevDir, '/')}"></span> -->
 	<ul th:each="file: ${fileList}">
 		<li>
 			<a 
 				th:if="${file.getType()}"
 				th:text="${file.getName()}" 
-				th:href="@{'/?pathToFile=' + ${file.getAbsPath()}}"
+				th:href="@{${file.getAbsPath()}}"
 			>
 			</a>
 			<a 
 				th:unless="${file.getType()}"
 				th:text="${file.getName()}" 
-				th:href="@{'/getFileContents?pathToFile=' + ${file.getAbsPath()}}"
+				th:href="@{'/getFileContents' + ${file.getAbsPath()}}"
 			>
 			</a>
 		</li>
