--- a/src/main/resources/templates/fileViewer.html
+++ b/src/main/resources/templates/fileViewer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Welcome to Explorer</h1>
-	<a th:href="(${#strings.equals(prevDir, '/')}) ? ${prevDir} : '/?pathToFile=' + ${prevDir}">..</a>
+	<a th:href="@{${prevDir}}">..</a>
 	<div th:text="${fileContents}"></div>
 </body>
 </html>
