--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,20 +3,59 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://cdn.tailwindcss.com"></script>
+    <style type="text/tailwindcss">
+		@layer base {
+			a {
+			    @apply underline text-blue-600;
+			}
+			a:hover {
+			    @apply text-blue-800;
+			}
+			a:visited {
+			    @apply text-purple-600;
+			}
+			h1 {
+				@apply text-3xl;
+			}
+			h2 {
+				@apply text-2xl;
+			}
+			h3 {
+				@apply text-xl;
+			}
+			h4 {
+				@apply text-lg;
+			}
+			h1, h2, h3, h4, h5, h6 {
+				@apply font-extrabold font-serif;
+			}
+			ol {
+				@apply list-decimal;
+			}
+			ul {
+				@apply list-disc;
+			}
+            li {
+                margin-left: 1em;
+            }
+		}
+	
+    </style>
 	<title>Directory explorer</title>
 </head>
 <body>
 	<h1>Welcome to Explorer</h1>
 	<p>Directory list</p>
 	<p th:text="${pwd}"></p>
-	<a th:if="${prevDir != null}" th:href="@{${prevDir}}">..</a>
+	<a th:if="${prevDir != null}" th:href="@{'/getDirList' + ${prevDir}}">..</a>
 	<!-- <span th:text="${#strings.equals(prevDir, '/')}"></span> -->
 	<ul th:each="file: ${fileList}">
 		<li>
 			<a 
 				th:if="${file.getType()}"
 				th:text="${file.getName()}" 
-				th:href="@{${file.getAbsPath()}}"
+				th:href="@{'/getDirList' + ${file.getAbsPath()}}"
 			>
 			</a>
 			<a 
